<resources>
    <string name="app_name">ImageView</string>
    <string name="btnPrevious"><![CDATA[<]]></string>
    <string name="btnNext"><![CDATA[>]]></string>
    <string name="txtCounter">TextView</string>
    <string name="btnNewAct">checkBox activity</string>
    <string name="checkbox1">CheckBox1</string>
    <string name="checkbox2">CheckBox2</string>
    <string name="checkbox3">CheckBox3</string>
    <string name="tglBtn">ToggleButton</string>
    <string name="btnTimeP">timePicker</string>
    <string name="set_date">Set date</string>
</resources>
